--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,4 +1,6 @@
-{
+[
+  {
+   "name": "development",
    "type": "postgres",
    "host": "localhost",
    "port": 5432,
@@ -21,4 +23,31 @@
       "migrationsDir": "src/migration",
       "subscribersDir": "src/subscriber"
    }
-}
+  },
+  {
+    "name": "test",
+    "type": "postgres",
+    "host": "localhost",
+    "port": 5432,
+    "username": "markg",
+    "password": "",
+    "database": "graphqlapi_test",
+    "synchronize": true,
+    "logging": false,
+    "dropSchema": true,
+    "entities": [
+        "src/entity/**/*.ts"
+    ],
+    "migrations": [
+        "src/migration/**/*.ts"
+    ],
+    "subscribers": [
+        "src/subscriber/**/*.ts"
+    ],
+    "cli": {
+        "entitiesDir": "src/entity",
+        "migrationsDir": "src/migration",
+        "subscribersDir": "src/subscriber"
+    }
+  }
+]
