--- a/package.json
+++ b/package.json
@@ -1,29 +1,49 @@
 {
-   "name": "graphqlapi",
-   "version": "0.0.1",
-   "description": "Awesome project developed with TypeORM.",
-   "devDependencies": {
-      "@types/bcryptjs": "^2.4.1",
-      "@types/node": "^10.0.5",
-      "@types/uuid": "^3.4.3",
-      "gql2ts": "^1.8.0",
-      "nodemon": "^1.17.4",
-      "ts-node": "6.0.3",
-      "tslint": "^5.10.0",
-      "tslint-config-prettier": "^1.12.0",
-      "typescript": "2.8.3"
-   },
-   "dependencies": {
-      "bcryptjs": "^2.4.3",
-      "graphql-import": "^0.5.2",
-      "graphql-yoga": "^1.13.1",
-      "pg": "^7.4.3",
-      "reflect-metadata": "^0.1.12",
-      "typeorm": "0.2.5",
-      "uuid": "^3.2.1"
-   },
-   "scripts": {
-      "start": "nodemon --exec ts-node src/index.ts",
-      "gen-schema-types": "gql2ts src/schema.graphql -o src/types/schema.d.ts"
-   }
+  "name": "graphqlapi",
+  "version": "0.0.1",
+  "description": "Awesome project developed with TypeORM.",
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.1",
+    "@types/jest": "^22.2.3",
+    "@types/node": "^10.0.5",
+    "@types/uuid": "^3.4.3",
+    "gql2ts": "^1.8.0",
+    "jest": "^22.4.3",
+    "nodemon": "^1.17.4",
+    "ts-jest": "^22.4.5",
+    "ts-node": "6.0.3",
+    "tslint": "^5.10.0",
+    "tslint-config-prettier": "^1.12.0",
+    "typescript": "2.8.3"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "graphql-import": "^0.5.2",
+    "graphql-request": "^1.6.0",
+    "graphql-yoga": "^1.13.1",
+    "pg": "^7.4.3",
+    "reflect-metadata": "^0.1.12",
+    "typeorm": "0.2.5",
+    "uuid": "^3.2.1"
+  },
+  "scripts": {
+    "start": "NODE_ENV=development nodemon --exec ts-node src/index.ts",
+    "test-server": "NODE_ENV=test ts-node src/index.ts",
+    "gen-schema-types": "gql2ts src/schema.graphql -o src/types/schema.d.ts",
+    "test": "NODE_ENV=test jest"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
+  }
 }
