--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "typescript": "2.8.3"
   },
   "dependencies": {
+    "@types/joi": "^13.0.8",
+    "@types/yup": "^0.24.4",
     "bcryptjs": "^2.4.3",
     "graphql": "^0.13.2",
     "graphql-import": "^0.5.2",
@@ -25,7 +27,8 @@
     "graphql-yoga": "^1.13.1",
     "pg": "^7.4.3",
     "reflect-metadata": "^0.1.12",
-    "typeorm": "0.2.5"
+    "typeorm": "0.2.5",
+    "yup": "^0.25.1"
   },
   "scripts": {
     "start": "NODE_ENV=development nodemon --exec ts-node src/index.ts",
