--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "Awesome project developed with TypeORM.",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.1",
+    "@types/ioredis": "^3.2.8",
     "@types/jest": "^22.2.3",
+    "@types/joi": "^13.0.8",
     "@types/node": "^10.0.5",
     "@types/uuid": "^3.4.3",
+    "@types/yup": "^0.24.4",
     "gql2ts": "^1.8.0",
     "jest": "^22.4.3",
     "nodemon": "^1.17.4",
@@ -17,17 +20,17 @@
     "typescript": "2.8.3"
   },
   "dependencies": {
-    "@types/joi": "^13.0.8",
-    "@types/yup": "^0.24.4",
     "bcryptjs": "^2.4.3",
     "graphql": "^0.13.2",
     "graphql-import": "^0.5.2",
     "graphql-request": "^1.6.0",
     "graphql-tools": "^3.0.2",
     "graphql-yoga": "^1.13.1",
+    "ioredis": "^3.2.2",
     "pg": "^7.4.3",
     "reflect-metadata": "^0.1.12",
     "typeorm": "0.2.5",
+    "uuid": "^3.2.1",
     "yup": "^0.25.1"
   },
   "scripts": {
